#######################################
2010-07-30 (Version 0.2.2)
#######################################
*Updated references.
*Fixed minor typos in documentation.


#######################################
2010-05-16 (Version 0.2.1)
#######################################
*Started a "NEWS" file for changes in the package.
*Changed the way the k-factor for the two-sided linear and
 nonlinear regression tolerance intervals are calculated.  Before,
 an approximation was used.  A more accurate method (presented at the
 bottom of p. 70 of Krishnamoorthy and Mathew (2009)) is used.
*Fixed a serious bug with the way nlregtol.int() checks that
 the pseudo-design matrix is, in fact, invertible.
*The function mvregtol.region() was added to estimate multivariate
 multiple linear regression tolerance factors.


#######################################
2010-05-02 (Version 0.2.0)
#######################################
*New function anovatol.int() performs tolerance interval
 calculations for balanced ANOVA.
*New function np.order() performs sample size determination
 for tolerance limits based on order statistics.
*New function umatol.int() performs uniformly most accurate
 upper tolerance limits for the Poisson, binomial, and negative
 binomial distributions.
*Updated K.factor() to also include the option method="ELL"
 for the Ellison correction method.
*Updated acc.samp() to include the option RQL.  Documentation
 has also been updated to provide more detailed explanations of the
 function's arguments.
*Updated exttol.int() to also perform calculations for the
 Gumbel distribution for the maximum.  Before, this function only
 did calculations for the Weibull distribution and the Gumbel
 distribution for the minimum.
*The portion of code for gammatol.int() when side=2 was
 incorrect.  It has now been corrected.
*laptol.int(), logistol.int(), uniftol.int(), and
 exttol.int() all now include the option side=2 to estimate